# TwiFucker

./: .gitignore  .gitmodules  FEATURES.md  FEATURES_jp.md  README.md  README_IN.md  README_JA.md  README_ZH-CN.md  README_ZH-TW.md  README_jp.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: issue.yml  main.yml  pr.yml
app/: .gitignore  build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: xposed_init
app/src/main/cpp/: Android.mk
app/src/main/cpp/src/: genuine.h  log.h  twifucker.cpp
app/src/main/java/icu/nullptr/twifucker/: AdHook.kt  Utils.kt  (+4 more)
app/src/main/jni/: CMakeLists.txt  twifucker.cc
app/src/main/res/: Turkishstrings.xml  strings.xml
app/src/main/res/drawable/: baseline_copy_24.xml  baseline_download_24.xml
app/src/main/res/layout/: download_item.xml
app/src/main/res/values/: arrays.xml  ids.xml  strings.xml
app/src/main/res/values-ar/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-in/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-pl/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-tr/: strings.xml
app/src/main/res/values-uk/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/values-zh-rTW/: strings.xml
app/src/main/res/xml/: settings_dialog.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+48 files in other folders)
